--- a/basics/package.yaml
+++ b/basics/package.yaml
@@ -37,13 +37,14 @@ executables:
     - basics
 
 tests:
-  basics-test:
+  unit-tests:
     main:                Spec.hs
-    source-dirs:         test
+    source-dirs:         test/unit
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
     - basics
+    - hspec-discover
     - hspec
