--- a/json/package.yaml
+++ b/json/package.yaml
@@ -35,6 +35,7 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - json
+    - aeson
 
 tests:
   unit-test:
@@ -48,3 +49,6 @@ tests:
     - json
     - hspec
     - aeson
+    - text
+    - vector
+    - unordered-containers
