--- a/json/json.cabal
+++ b/json/json.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 3519c3054d7e60f8a3dc4fadc60845d819ed7de12deed84734b2a644e868313d
+-- hash: a0ef6368bf0a3874cf6887556396aa9a470a3f21151f5889de2144fe8f3e526f
 
 name:           json
 version:        0.1.0.0
@@ -69,5 +69,6 @@ test-suite unit-test
       AesonParser1Spec
       AesonParser2Spec
       AesonParser3Spec
+      AesonParser4Spec
       Paths_json
   default-language: Haskell2010
